# todo

./: .gitignore
C++/: CMakeLists.txt  README.md  main.cpp
C++/cmd/: cmd.cpp  cmd.h
C++/data/: data.h
C++/data/store/: store.h
C++/data/store/mem/: mem.h
C++/options/: options.cpp  options.h
C/cmd/: cmd.c  cmd.h
C/common/: common.h
C/data/: data.c  data.h
C/data/list/: list.c  list.h
C/data/types/: types.h
Zig/src/: main.zig
Zig/src/cmd/: cmd.zig
Zig/src/data/: data.zig  mem.zig
